--- a/src/views/admin/index.ejs
+++ b/src/views/admin/index.ejs
@@ -1,74 +1,56 @@
-<div class="container mt-4">
-  <h1 class="mb-4">Панель администратора</h1>
+<div class="content-container">
+  <h1 style="margin-bottom: 2rem">Панель администратора</h1>
 
-  <div class="row">
-    <div class="col-md-4 mb-4">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Пользователи</h5>
-          <p class="card-text">Управление пользователями системы</p>
-          <a href="/admin/users" class="btn btn-primary">Управление</a>
-        </div>
+  <div class="grid grid-3">
+    <div class="card">
+      <div class="card-body">
+        <a href="/admin/users" class="btn btn-primary"
+          >Управление пользователями</a
+        >
       </div>
     </div>
 
-    <div class="col-md-4 mb-4">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Авторы</h5>
-          <p class="card-text">Управление авторами произведений</p>
-          <a href="/admin/authors" class="btn btn-primary">Управление</a>
-        </div>
+    <div class="card">
+      <div class="card-body">
+        <a href="/admin/authors" class="btn btn-primary">Управление авторами</a>
       </div>
     </div>
 
-    <div class="col-md-4 mb-4">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Стили</h5>
-          <p class="card-text">Управление художественными стилями</p>
-          <a href="/admin/styles" class="btn btn-primary">Управление</a>
-        </div>
+    <div class="card">
+      <div class="card-body">
+        <a href="/admin/styles" class="btn btn-primary"
+          >Управление художественными стилями</a
+        >
       </div>
     </div>
 
-    <div class="col-md-4 mb-4">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Жанры</h5>
-          <p class="card-text">Управление художественными жанрами</p>
-          <a href="/admin/genres" class="btn btn-primary">Управление</a>
-        </div>
+    <div class="card">
+      <div class="card-body">
+        <a href="/admin/genres" class="btn btn-primary"
+          >Управление художественными жанрами</a
+        >
       </div>
     </div>
 
-    <div class="col-md-4 mb-4">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Выставки</h5>
-          <p class="card-text">Управление выставками</p>
-          <a href="/admin/exhibitions" class="btn btn-primary">Управление</a>
-        </div>
+    <div class="card">
+      <div class="card-body">
+        <a href="/admin/exhibitions" class="btn btn-primary"
+          >Управление выставками</a
+        >
       </div>
     </div>
 
-    <div class="col-md-4 mb-4">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Произведения</h5>
-          <p class="card-text">Управление произведениями искусства</p>
-          <a href="/admin/artworks" class="btn btn-primary">Управление</a>
-        </div>
+    <div class="card">
+      <div class="card-body">
+        <a href="/admin/artworks" class="btn btn-primary"
+          >Управление произведениями искусства</a
+        >
       </div>
     </div>
 
-    <div class="col-md-4 mb-4">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Билеты</h5>
-          <p class="card-text">Управление билетами на выставки</p>
-          <a href="/admin/tickets" class="btn btn-primary">Управление</a>
-        </div>
+    <div class="card">
+      <div class="card-body">
+        <a href="/admin/tickets" class="btn btn-primary">Управление билетами</a>
       </div>
     </div>
   </div>
