--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -4,21 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %> | Художественная галерея</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   </head>
   <body>
-    <%- include('../partials/header') %>
+    <%- include('../partials/header') %> <%- body %> <%-
+    include('../partials/footer') %>
 
-    <main class="container mt-4"><%- body %></main>
-
-    <%- include('../partials/footer') %>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/main.js"></script>
+    <script src="/js/admin.js"></script>
+    <script src="/js/genres.js"></script>
   </body>
 </html>
