--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,25 +1,25 @@
-<footer class="footer mt-auto py-3 bg-light">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">
+<footer class="site-footer">
+  <div class="footer-container">
+    <div class="footer-content">
+      <div class="footer-section">
         <h5>Художественная галерея</h5>
         <p>Ваш проводник в мир искусства</p>
       </div>
-      <div class="col-md-4">
+      <div class="footer-section">
         <h5>Контакты</h5>
         <p>Email: info@gallery.ru</p>
         <p>Телефон: +7 (999) 123-45-67</p>
       </div>
-      <div class="col-md-4">
+      <div class="footer-section">
         <h5>Мы в соцсетях</h5>
         <div class="social-links">
-          <a href="#" class="text-dark me-2">VK</a>
-          <a href="#" class="text-dark me-2">Telegram</a>
+          <a href="#">VK</a>
+          <a href="#">Telegram</a>
         </div>
       </div>
     </div>
-    <hr />
-    <div class="text-center">
+    <div class="footer-divider"></div>
+    <div class="footer-copyright">
       <p>
         &copy; <%= new Date().getFullYear() %> Художественная галерея. Все права
         защищены.
