added style managemet and auth from many devices; fixed register, stylees

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -29,7 +29,7 @@
           <a class="nav-link" href="/profile">Профиль</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/auth/logout">Выйти</a>
+          <a class="nav-link" href="#" data-action="logout">Выйти</a>
         </li>
         <% } else { %>
         <li class="nav-item">
