--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -1,4 +1,4 @@
-<div class="content-container">
+<div class="content-container auth-container">
   <div class="form-container">
     <div class="card">
       <div class="card-header">
