--- a/src/views/admin/index.ejs
+++ b/src/views/admin/index.ejs
@@ -34,7 +34,7 @@
 
     <div class="card">
       <div class="card-body">
-        <a href="/admin/exhibitions" class="btn btn-primary"
+        <a href="/manager/exhibitions" class="btn btn-primary"
           >Управление выставками</a
         >
       </div>
