--- a/src/views/admin/authors.ejs
+++ b/src/views/admin/authors.ejs
@@ -57,22 +57,27 @@
         <div class="form-group">
           <label for="authorSurname">Фамилия</label>
           <input type="text" id="authorSurname" required />
+          <div class="error-message" id="authorSurnameError"></div>
         </div>
         <div class="form-group">
           <label for="authorFirstName">Имя</label>
           <input type="text" id="authorFirstName" required />
+          <div class="error-message" id="authorFirstNameError"></div>
         </div>
         <div class="form-group">
           <label for="authorPatronymic">Отчество</label>
           <input type="text" id="authorPatronymic" required />
+          <div class="error-message" id="authorPatronymicError"></div>
         </div>
         <div class="form-group">
           <label for="authorDateOfBirth">Дата рождения</label>
           <input type="date" id="authorDateOfBirth" required />
+          <div class="error-message" id="authorDateOfBirthError"></div>
         </div>
         <div class="form-group">
           <label for="authorDateOfDeath">Дата смерти</label>
           <input type="date" id="authorDateOfDeath" required />
+          <div class="error-message" id="authorDateOfDeathError"></div>
         </div>
       </form>
     </div>
@@ -102,22 +107,27 @@
         <div class="form-group">
           <label for="editAuthorSurname">Фамилия</label>
           <input type="text" id="editAuthorSurname" required />
+          <div class="error-message" id="editAuthorSurnameError"></div>
         </div>
         <div class="form-group">
           <label for="editAuthorFirstName">Имя</label>
           <input type="text" id="editAuthorFirstName" required />
+          <div class="error-message" id="editAuthorFirstNameError"></div>
         </div>
         <div class="form-group">
           <label for="editAuthorPatronymic">Отчество</label>
           <input type="text" id="editAuthorPatronymic" required />
+          <div class="error-message" id="editAuthorPatronymicError"></div>
         </div>
         <div class="form-group">
           <label for="editAuthorDateOfBirth">Дата рождения</label>
           <input type="date" id="editAuthorDateOfBirth" required />
+          <div class="error-message" id="editAuthorDateOfBirthError"></div>
         </div>
         <div class="form-group">
           <label for="editAuthorDateOfDeath">Дата смерти</label>
           <input type="date" id="editAuthorDateOfDeath" required />
+          <div class="error-message" id="editAuthorDateOfDeathError"></div>
         </div>
       </form>
     </div>
