--- a/src/views/admin/authors.ejs
+++ b/src/views/admin/authors.ejs
@@ -66,7 +66,7 @@
         </div>
         <div class="form-group">
           <label for="authorPatronymic">Отчество</label>
-          <input type="text" id="authorPatronymic" required />
+          <input type="text" id="authorPatronymic" />
           <div class="error-message" id="authorPatronymicError"></div>
         </div>
         <div class="form-group">
@@ -116,7 +116,7 @@
         </div>
         <div class="form-group">
           <label for="editAuthorPatronymic">Отчество</label>
-          <input type="text" id="editAuthorPatronymic" required />
+          <input type="text" id="editAuthorPatronymic" />
           <div class="error-message" id="editAuthorPatronymicError"></div>
         </div>
         <div class="form-group">
